# beancount-blog-examples

./: README.md  pyproject.toml
chapter-2/: README.md  journal.beancount
chapter-2/src/: accounts.beancount  balance.beancount  transactions.beancount
chapter-3/: README.md  beancount_import_config.py  journal.beancount
chapter-3/data/hsbc-current/: statement-2024-01.csv
chapter-3/importers/: hsbc.py
chapter-3/src/: accounts.beancount  ignored.beancount  transactions.beancount
chapter-4/: README.md  beancount_import_config.py  journal.beancount
chapter-4/src/: accounts.beancount  commodities.beancount  prices.beancount  transactions.beancount
chapter-5/: README.md  beangrow.pbtxt  journal-gross.beancount  journal-net.beancount
chapter-5/outputs/: balance-sheet.txt  holdings.txt  networth.txt
chapter-5/scripts/: archive.py
chapter-5/src/: accounts.beancount  balance.beancount  prices.beancount  transactions.beancount
chapter-6/: README.md
chapter-6/common/src/: accounts.beancount  commodities.beancount
chapter-6/lalit/: beancount_import_config.py  journal-net.beancount
chapter-6/lalit/src/: accounts.beancount  journal.beancount  transactions.beancount
chapter-6/total/: journal-net.beancount
chapter-6/wife/: beancount_import_config.py  journal-net.beancount
chapter-6/wife/importers/: hsbc.py
chapter-6/wife/src/: accounts.beancount  journal.beancount  transactions.beancount
demo/: README.md  beangrow.pbtxt  dashboards.yaml  generate.py  journal.beancount  prices.beancount
scripts/: quickstart.sh  validate_all.py
